Stop video and images that aren't being shown from loading on mobile devices.

--- a/code/styles/modules/_video.scss
+++ b/code/styles/modules/_video.scss
@@ -10,16 +10,21 @@
   width: auto;
   z-index: 1;
 
-  @include susy-breakpoint($small-screen) {
+  @include susy-breakpoint($medium-screen) {
     display: block;
   }
 }
 
 .video-fallback {
+  display:none;
   left: 50%;
   min-width: 1920px;
   min-height: 1080px;
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
+
+  @include susy-breakpoint($small-screen) {
+    display: block;
+  }
 }
